[gd_scene load_steps=14 format=2]

[ext_resource path="res://guns/turret/turret_1.png" type="Texture" id=1]
[ext_resource path="res://guns/turret/turret.gd" type="Script" id=2]
[ext_resource path="res://guns/gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://guns/turret/turret_2.png" type="Texture" id=4]
[ext_resource path="res://components/detection_zone.tscn" type="PackedScene" id=5]
[ext_resource path="res://guns/turret/turret_bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/hit_box.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_local_to_scene = true
resource_name = "Shoot"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fire"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath("Gun")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "RapidFire"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("Gun")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Wait"

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[node name="Turret" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 3 )]
BULLET = ExtResource( 6 )
flip = false

[node name="Sprite" parent="Gun" index="0"]
rotation = -1.5708
texture = ExtResource( 4 )

[node name="Barrel" parent="Gun" index="1"]
position = Vector2( 8, 0 )

[node name="CoolDown" parent="Gun" index="2"]
wait_time = 0.1

[node name="AnimationPlayer" parent="Gun" index="3"]
anims/Shoot = SubResource( 2 )

[node name="DetectionZone" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 4 )
anims/RapidFire = SubResource( 3 )
anims/Wait = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape" parent="HitBox" index="0"]
shape = SubResource( 6 )

[connection signal="robber_entered" from="DetectionZone" to="." method="_on_DetectionZone_robber_entered"]
[connection signal="robber_exited" from="DetectionZone" to="." method="_on_DetectionZone_robber_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="dmg_taken" from="HitBox" to="." method="_on_HitBox_dmg_taken"]

[editable path="Gun"]
[editable path="HitBox"]
